--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.6",
+    "@next/font": "^14.2.4",
     "@tailwindcss/typography": "^0.5.13",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
