--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4",
+    "eslint-plugin-react": "^7.34.3",
+    "globals": "^15.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^7.14.1"
   }
 }
