connecting to db

--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,4 @@ CLERK_SECRET_KEY=sk_test_bFEXwIv4qV3RhovYMInaBE0doZzuix2iAJKwrwj35C
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_TINY_MCE_API_KEY=bgy9swn3axqrzmtxkldqbfa7wwz1pwjs6deo1f88h0fgcssz
+MONGODB_URI=mongodb+srv://kartikeyuniyal13:HPL3utefFcpMfiDL@cluster1.optdxsd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
