--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.6",
-    "@hookform/resolvers": "^3.7.0",
+    "@hookform/resolvers": "^3.9.0",
     "@next/font": "^14.2.4",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -25,6 +25,8 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.17.3",
     "lucide-react": "^0.396.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.4.5",
     "next": "14.2.4",
     "prettier": "^3.3.2",
     "react": "^18",
@@ -35,17 +37,13 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.5.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8.57.0",
+    "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "eslint-plugin-react": "^7.34.3",
-    "globals": "^15.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5",
-    "typescript-eslint": "^7.14.1"
+    "typescript": "^5"
   }
 }
