--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextpro1",
+  "name": "dev-test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,42 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.1.6",
-    "@hookform/resolvers": "^3.9.0",
-    "@next/font": "^14.2.4",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-menubar": "^1.1.1",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@tailwindcss/typography": "^0.5.13",
+    "@clerk/nextjs": "^4.23.5",
+    "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-dialog": "1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.3",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tailwindcss/typography": "^0.5.10",
     "@tinymce/tinymce-react": "^5.1.1",
+    "@types/node": "20.5.9",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "eslint-config-prettier": "^9.1.0",
+    "clsx": "^2.0.0",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-tailwindcss": "^3.17.3",
-    "lucide-react": "^0.396.0",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.4.5",
-    "next": "14.2.4",
-    "prettier": "^3.3.2",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.52.1",
-    "svix": "^1.24.0",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "postcss": "^8",
+    "eslint-plugin-tailwindcss": "^3.17.4",
+    "lucide-react": "^0.274.0",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.6.1",
+    "next": "^14.2.5",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
+    "shadcn-ui": "^0.2.3",
+    "svix": "^1.13.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.2.2",
+    "zod": "^3.22.4"
   }
 }
