working on profile

--- a/.env.local
+++ b/.env.local
@@ -5,4 +5,4 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 
 NEXT_CLERK_WEBHOOK_SECRET=whsec_eZHLBqxVq7VawWiHugEJaWm3EIJr6xJJ
 NEXT_PUBLIC_TINY_MCE_API_KEY=bgy9swn3axqrzmtxkldqbfa7wwz1pwjs6deo1f88h0fgcssz
-MONGODB_URI=mongodb+srv://kartikeyuniyal13:HPL3utefFcpMfiDL@cluster1.optdxsd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+MONGODB_URL=mongodb+srv://kartikeyuniyal13:HPL3utefFcpMfiDL@cluster1.optdxsd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
