--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.23.5",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
@@ -36,6 +37,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prismjs": "^1.29.0",
+    "query-string": "^9.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
@@ -48,6 +50,7 @@
   },
   "devDependencies": {
     "@types/node": "20.14.11",
+    "@types/prismjs": "^1.26.4",
     "@types/react": "18.3.3",
     "typescript": "5.5.3"
   }
